[metadata]
name = STTP
version = 1.0.4
author = J. Ritchie Carroll
author_email = rcarroll@gridprotectionalliance.org
description = STTP Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = STTP, streaming, time-series, synchrophasor
license_file = LICENSE
url = https://github.com/sttp/pyapi
download_url = https://pypi.org/project/sttpapi/
project_urls =
    Bug Tracker = https://github.com/sttp/pyapi/issues
    Documentation = https://sttp.github.io/pyapi/
    Source Code = https://github.com/sttp/pyapi
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src